<resources>
    <string name="app_name">Los Angeles Pet Shelter Searcher</string>

    <string name="dogs">Dogs</string>
    <string name="Cats">Cats</string>
    <string name="others">Others</string>

    <string name="all_dogs">All Dogs</string>
    <string name="all_cats">All Cats</string>
    <string name="all_other">All Others</string>

    <string name="loc_eastValley">East Valley Shelter</string>
    <string name="loc_harbor">Harbor Shelter</string>
    <string name="loc_northCentral">North Central Shelter</string>
    <string name="loc_southLA">South Los Angeles Shelter</string>
    <string name="loc_westLA">West Los Angeles Shelter</string>
    <string name="loc_westValley">West Valley Shelter</string>

    <string name="id_text">ID:</string>
    <string name="name_text">Name:</string>
    <string name="breed_text">Breed:</string>
    <string name="weight_text">Weight:</string>
    <string name="age_text">Age:</string>
    <string name="loc_text">Location:</string>

    <string name="id_pref">ID:</string>

    <string name="closed">This shelter is temporarily closed.</string>

    <string name="rescue">*Available to rescue groups only</string>
    <string name="minor_care">*Will require minor medical care</string>
    <string name="major_care">*Will require major medical care</string>

    <string name="eastValley_address">14409 Vanowen St., Van Nuys, CA 91405</string>
    <string name="westLA_address">11361 West Pico Blvd., Los Angeles, CA 90064</string>
    <string name="southLA_address">1850 W. 60th St. Los Angeles, CA 90047</string>
    <string name="harbor_address">957 N. Gaffey Street, San Pedro, CA 90731</string>

    <string name="shelter_hours">Currently open by appointment only.</string>
    <string name="shelter_phone">Contact: (888) 452–7381</string>

    <string name="disclaimer_header">Disclaimer:</string>
    <string name="disclaimer">All information displayed is taken directly from the public website of Los Angeles Animal Services. No guarantee can be made as to its accuracy, and any inquiries should be directed to the shelters themselves.</string>
    <string name="okay">Okay</string>
</resources>
