<?xml version="1.0" encoding="utf-8"?>


<androidx.cardview.widget.CardView
    xmlns:card_view="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="8dp"
    card_view:cardElevation="8dp"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:focusable="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/all_animals"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/black"
            app:backgroundTint="@color/transparent"
            android:textSize="30dp">
        </Button>

        <Button
            android:id="@+id/westValley"
            android:text="@string/loc_westValley"
            android:layout_width="180dp"
            android:layout_height="135dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/all_animals"
            app:backgroundTint="@color/transparent"
            android:layout_marginTop="8dp">
        </Button>

        <Button
            android:id="@+id/eastValley"
            android:text="@string/loc_eastValley"
            android:layout_width="180dp"
            android:layout_height="135dp"
            app:layout_constraintStart_toEndOf="@id/westValley"
            app:layout_constraintTop_toBottomOf="@id/all_animals"
            app:backgroundTint="@color/transparent"
            android:layout_marginTop="8dp"/>

        <Button
            android:id="@+id/westLA"
            android:text="@string/loc_westLA"
            android:layout_width="180dp"
            android:layout_height="135dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/westValley"
            app:backgroundTint="@color/transparent"
            android:layout_marginTop="8dp">
        </Button>

        <Button
            android:id="@+id/southLA"
            android:text="@string/loc_southLA"
            android:layout_width="180dp"
            android:layout_height="135dp"
            app:layout_constraintStart_toEndOf="@id/westLA"
            app:layout_constraintTop_toBottomOf="@id/westValley"
            app:backgroundTint="@color/transparent"
            android:layout_marginTop="8dp">
        </Button>

        <Button
            android:id="@+id/northCentral"
            android:text="@string/loc_northCentral"
            android:layout_width="180dp"
            android:layout_height="135dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/westLA"
            app:backgroundTint="@color/transparent"
            android:layout_marginTop="8dp">
        </Button>

        <Button
            android:id="@+id/harbor"
            android:text="@string/loc_harbor"
            android:layout_width="180dp"
            android:layout_height="135dp"
            app:layout_constraintTop_toBottomOf="@id/westLA"
            app:layout_constraintStart_toEndOf="@id/northCentral"
            app:backgroundTint="@color/transparent"
            android:layout_marginTop="8dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>