<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popup_parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:backgroundTint="@color/test"
    app:cardCornerRadius="5dp"
    android:fontFamily="@font/lato">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/disclaimer_header"
            android:text="@string/disclaimer_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textStyle="bold"
            android:layout_marginStart="2dp"
            android:textSize="20sp">
        </TextView>

        <TextView
            android:id="@+id/disclaimer"
            android:text="@string/disclaimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/disclaimer_header"
            android:layout_marginStart="2dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="16sp">
        </TextView>

        <Button
            android:id="@+id/exit_disclaimer"
            android:text="@string/okay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:backgroundTint="@color/Light_Grey"
            app:cornerRadius="2dp"
            app:strokeColor="@color/black"
            app:strokeWidth="1dp"
            android:textColor="@color/black"
            android:elevation="0dp">
        </Button>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>